--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <input type="radio" name="alt" id="altD" class="alt" />
         <label for="altD" id="respD">respostaD</label>
 
-        <button type="submit" class="submit">Enviar</button>
+        <button type="button" class="submit">Enviar</button>
       </div>
     </div>
   </body>
