--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
   </head>
   <body>
     <div class="container">
+      <div class="login"> 
+      <label for="nome" class="labelNome">Jogador:</label>
+      <input type="text" placeholder="Digite o seu nome aqui" class="nome" required autofocus>
       <button class="iniciar" name="iniciar" id="iniciar">Iniciar</button>
+
+    </div>
+      <p class="bemVindo hidden">Bem vindo(a), nome</p>
+      <p class="carregando hidden">carregando...</p>
       <div class="jogo hidden">
         <h1 class="questao">QUESTÃO</h1>
 
