--- a/index.html
+++ b/index.html
@@ -17,38 +17,41 @@
           class="nome"
           required
           autofocus
-        
         />
         <button class="iniciar" name="iniciar" id="iniciar">Iniciar</button>
       </div>
       <div class="iniciando">
-      <p class="bemVindo hidden">Bem vindo(a), nome</p>
-      <p class="carregando hidden">carregando...</p>
-    </div>
+        <p class="bemVindo hidden">Bem vindo(a), nome</p>
+        <p class="carregando hidden">carregando...</p>
+      </div>
       <div class="jogo hidden">
-
         <clas class="questoes">
+          <h1 class="questao">QUESTÃO</h1>
 
-        <h1 class="questao">QUESTÃO</h1>
+          <div class="inputs">
+            <div class="input1">
+              <input type="radio" name="alt" id="altA" class="alt" />
+              <label for="altA" id="respA">respostaA</label>
+            </div>
 
-        <div class="inputs">
+            <div class="input2">
+              <input type="radio" name="alt" id="altB" class="alt" />
+              <label for="altB" id="respB">respostaB</label>
+            </div>
 
-        <input type="radio" name="alt" id="altA" class="alt" />
-        <label for="altA" id="respA">respostaA</label>
-
-        <input type="radio" name="alt" id="altB" class="alt" />
-        <label for="altB" id="respB">respostaB</label>
-
-        <input type="radio" name="alt" id="altC" class="alt" />
-        <label for="altC" id="respC">respostaC</label>
-
-        <input type="radio" name="alt" id="altD" class="alt" />
-        <label for="altD" id="respD">respostaD</label>
-      </div>
-      </clas>
-        <div class="botao"> 
-        <button type="button" class="submit">Enviar</button>
-      </div>
+            <div class="input3">
+              <input type="radio" name="alt" id="altC" class="alt" />
+              <label for="altC" id="respC">respostaC</label>
+            </div>
+            <div class="input4">
+              <input type="radio" name="alt" id="altD" class="alt" />
+              <label for="altD" id="respD">respostaD</label>
+            </div>
+          </div>
+        </clas>
+        <div class="botao">
+          <button type="button" class="submit">Enviar</button>
+        </div>
       </div>
     </div>
   </body>
